생성 시간 반영 / 스크롤바 스타일링

--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,8 @@
 
 body {
   margin: 0;
-  font-family: "Cormorant Garamond", "Pretendard", "Noto Sans KR",
-    -apple-system, sans-serif;
+  font-family: "Cormorant Garamond", "Pretendard", "Noto Sans KR", -apple-system,
+    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
